--- a/truth/index.html
+++ b/truth/index.html
@@ -1,137 +1,137 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta
-			name="viewport"
-			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-		/>
-		<link rel="stylesheet" href="./css/main.css" />
-		<title>Truth</title>
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Truth</title>
+  </head>
 
-	<body>
-		<div class="wrapper">
-			<!-- Header -->
-			<header class="header">
-				<div class="header__container">
-					<a href="#" class="header__logo"
-						><img src="img/logo.png" alt="logo"
-					/></a>
-					<nav class="header__nav menu">
-						<ul class="menu__items">
-							<li class="header__item"><a href="#">About</a></li>
-							<li class="header__item"><a href="#">Media & Content</a></li>
-							<li class="header__item"><a href="#">Projects</a></li>
-							<li class="header__item"><a href="#">Get involved</a></li>
-							<li class="header__item"><a href="#">Contact Us</a></li>
-						</ul>
-					</nav>
-					<div class="header__language">
-						<div class="header__head">
-							<span>English</span
-							><img src="img/icon-down.svg" alt="icon-down" />
-						</div>
-					</div>
-					<div class="header__burger">
-						<img src="img/icon-menu.svg" alt="icon-menu" />
-					</div>
-				</div>
-			</header>
-			<!-- Header -->
+  <body>
+    <div class="wrapper">
+      <!-- Header -->
+      <header class="header">
+        <div class="header__container">
+          <a href="#" class="header__logo"
+            ><img src="img/logo.png" alt="logo"
+          /></a>
+          <nav class="header__nav menu">
+            <ul class="menu__items">
+              <li class="header__item"><a href="#">About</a></li>
+              <li class="header__item"><a href="#">Media & Content</a></li>
+              <li class="header__item"><a href="#">Projects</a></li>
+              <li class="header__item"><a href="#">Get involved</a></li>
+              <li class="header__item"><a href="#">Contact Us</a></li>
+            </ul>
+          </nav>
+          <div class="header__language">
+            <div class="header__head">
+              <span>English</span
+              ><img src="img/icon-down.svg" alt="icon-down" />
+            </div>
+          </div>
+          <div class="header__burger">
+            <img src="img/icon-menu.svg" alt="icon-menu" />
+          </div>
+        </div>
+      </header>
+      <!-- Header -->
 
-			<main>
-				<!-- Приветствие -->
-				<section class="welcome">
-					<div class="welcome__container">
-						<div class="welcome__bar-top">The Truth Will Set You Free</div>
-						<div class="welcome__inner">
-							<div class="welcome__text-start">the</div>
-							<h1 class="welcome__sub-title">
-								<img src="img/img-logo.png" alt="img-logo" />
-							</h1>
-							<div class="welcome__text-end">Will Set You Free</div>
-						</div>
-						<div class="welcome__bar-bottom">
-							Bringing Unity Through Knowledge
-						</div>
-						<a href="#index.html" class="welcome__join">
-							<span>Join the Movement</span>
-							<svg
-								width="20"
-								height="20"
-								viewBox="0 0 20 20"
-								fill="none"
-								xmlns="http://www.w3.org/2000/svg"
-							>
-								<path
-									d="M10 4.16663V15.8333M10 15.8333L15.8333 9.99996M10 15.8333L4.16666 9.99996"
-									stroke="white"
-									stroke-width="1.5"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-								/>
-							</svg>
-						</a>
-					</div>
-				</section>
-				<!-- Приветствие -->
+      <main>
+        <!-- Приветствие -->
+        <section class="welcome">
+          <div class="welcome__container">
+            <div class="welcome__bar-top">The Truth Will Set You Free</div>
+            <div class="welcome__inner">
+              <div class="welcome__text-start">the</div>
+              <h1 class="welcome__sub-title">
+                <img src="img/img-logo.png" alt="img-logo" />
+              </h1>
+              <div class="welcome__text-end">Will Set You Free</div>
+            </div>
+            <div class="welcome__bar-bottom">
+              Bringing Unity Through Knowledge
+            </div>
+            <a href="#index.html" class="welcome__join">
+              <span>Join the Movement</span>
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 20 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M10 4.16663V15.8333M10 15.8333L15.8333 9.99996M10 15.8333L4.16666 9.99996"
+                  stroke="white"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </a>
+          </div>
+        </section>
+        <!-- Приветствие -->
 
-				<!-- Новая эра -->
-				<section class="new-era">
-					<div class="new-era__container">
-						<h2 class="new-era__title">
-							A New Era of Truth and Unity Begins Here
-						</h2>
-						<div class="new-era__img">
-							<img src="img/new-era.png" alt="new-era" />
-						</div>
-						<p class="new-era__descr">
-							Through innovation, tradition, and shared values, we aim to
-							inspire every Jew to reconnect with our collective purpose.
-						</p>
-						<a href="#" class="new-era__more">
-							<span>more about us</span>
-							<img src="img/icon_arrow-right.svg" alt="icon_arrow-right" />
-						</a>
-					</div>
-				</section>
-				<!-- Новая эра -->
+        <!-- Новая эра -->
+        <section class="new-era">
+          <div class="new-era__container">
+            <h2 class="new-era__title">
+              A New Era of Truth and Unity Begins Here
+            </h2>
+            <div class="new-era__img">
+              <img src="img/new-era.png" alt="new-era" />
+            </div>
+            <p class="new-era__descr">
+              Through innovation, tradition, and shared values, we aim to
+              inspire every Jew to reconnect with our collective purpose.
+            </p>
+            <a href="#" class="new-era__more">
+              <span>more about us</span>
+              <img src="img/icon_arrow-right.svg" alt="icon_arrow-right" />
+            </a>
+          </div>
+        </section>
+        <!-- Новая эра -->
 
-				<!-- Превьюшка лого -->
-				<section class="prev-logo">
-					<div class="prev-logo__container">
-						<div class="prev-logo__img">
-							<img src="img/prev-logo.png" alt="prev-logo" />
-						</div>
-					</div>
-				</section>
-				<!-- Превьюшка лого -->
+        <!-- Превьюшка лого -->
+        <section class="prev-logo">
+          <div class="prev-logo__container">
+            <div class="prev-logo__img">
+              <img src="img/prev-logo.png" alt="prev-logo" />
+            </div>
+          </div>
+        </section>
+        <!-- Превьюшка лого -->
 
-				<!-- Разговор -->
-				<section class="conversation">
-					<div class="conversation__container">
-						<h2 class="conversation__title">Be part of the conversation</h2>
-						<p class="conversation__descr">
-							join our Chevruta platform or subscribe for updates!
-						</p>
-					</div>
-					<div class="conversation__image">
-						<img src="img/maps-img.png" alt="maps" />
-					</div>
-				</section>
-				<!-- Разговор -->
+        <!-- Разговор -->
+        <section class="conversation">
+          <div class="conversation__container">
+            <h2 class="conversation__title">Be part of the conversation</h2>
+            <p class="conversation__descr">
+              join our Chevruta platform or subscribe for updates!
+            </p>
+          </div>
+          <div class="conversation__image">
+            <img src="img/maps-img.png" alt="maps" />
+          </div>
+        </section>
+        <!-- Разговор -->
 
-				<!-- Изучите наши инициативы -->
-				<section class="our-initiatives">
-					<div class="our-initiatives__container">
-						<h2 class="our-initiatives__title _soon">
-							Секция "Изучите наши инициативы"
-						</h2>
-					</div>
-				</section>
-				<!--         <section class="our-initiatives">
+        <!-- Изучите наши инициативы -->
+        <section class="our-initiatives">
+          <div class="our-initiatives__container">
+            <h2 class="our-initiatives__title _soon">
+              Секция "Изучите наши инициативы"
+            </h2>
+          </div>
+        </section>
+        <!--         <section class="our-initiatives">
           <div class="our-initiatives__container">
             <h2 class="our-initiatives__title">Explore Our Initiatives</h2>
             <div class="swiper our-initiatives__swiper">
@@ -176,133 +176,132 @@
             </div>
           </div>
         </section> -->
-				<!-- Изучите наши инициативы -->
+        <!-- Изучите наши инициативы -->
 
-				<!-- Что о нас говорят  -->
-				<section class="about">
-					<div class="about__container">
-						<h2 class="about__title _soon">Секция "Что о нас говорят"</h2>
-					</div>
-				</section>
-				<!-- Что о нас говорят -->
+        <!-- Что о нас говорят  -->
+        <section class="about">
+          <div class="about__container">
+            <h2 class="about__title _soon">Секция "Что о нас говорят"</h2>
+          </div>
+        </section>
+        <!-- Что о нас говорят -->
 
-				<!-- Обратная связь -->
-				<section class="fields">
-					<div class="fields__container">
-						<h2 class="fields__title">
-							<span>a clear perspective on what counts</span>
-							<img src="./img/line-before.svg" alt="line-before" />
-						</h2>
-						<div class="fields__body">
-							<h3 class="fields__sub-title">Stay Updated with the Truth</h3>
-							<div class="fields__form">
-								<form action="#">
-									<div class="fields__label">
-										<label for="#">Email</label>
-										<input type="text" placeholder="Enter your email" />
-									</div>
-									<div class="fields__label">
-										<label for="#">Last Name</label>
-										<input type="text" placeholder="Enter your Last Name" />
-									</div>
-									<div class="fields__label">
-										<label for="#">First Name</label>
-										<input type="text" placeholder="Enter your First Name" />
-									</div>
-									<button class="fields__send">subscribe</button>
-								</form>
-							</div>
-						</div>
-					</div>
-				</section>
-				<!-- Обратная связь -->
-			</main>
+        <!-- Обратная связь -->
+        <section class="fields">
+          <div class="fields__container">
+            <h2 class="fields__title">
+              <span>a clear perspective on what counts</span>
+              <img src="./img/line-before.svg" alt="line-before" />
+            </h2>
+            <div class="fields__body">
+              <h3 class="fields__sub-title">Stay Updated with the Truth</h3>
+              <div class="fields__form">
+                <form action="#">
+                  <div class="fields__label">
+                    <label for="#">Email</label>
+                    <input type="text" placeholder="Enter your email" />
+                  </div>
+                  <div class="fields__label">
+                    <label for="#">Last Name</label>
+                    <input type="text" placeholder="Enter your Last Name" />
+                  </div>
+                  <div class="fields__label">
+                    <label for="#">First Name</label>
+                    <input type="text" placeholder="Enter your First Name" />
+                  </div>
+                  <button class="fields__send">subscribe</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Обратная связь -->
+      </main>
 
-			<!-- Footer -->
-			<footer class="footer">
-				<div class="footer__container">
-					<div class="footer__head">
-						<a href="#" class="footer__logo"
-							><img src="img/logo-footer.png" alt="logo"
-						/></a>
-						<p class="footer__text">Empowering Unity Through Knowledge</p>
-					</div>
-					<div class="footer__inner">
-						<div class="footer__nav">
-							<ul class="footer__menu">
-								<li class="footer__item"><a href="#">About</a></li>
-								<li class="footer__item"><a href="#">Media & Content</a></li>
-								<li class="footer__item"><a href="#">Projects</a></li>
-								<li class="footer__item"><a href="#">Get involved</a></li>
-								<li class="footer__item"><a href="#">Сontact Us</a></li>
-							</ul>
-						</div>
-						<div class="footer__info">
-							<div class="footer__item">
-								2972 Westheimer Rd. Santa Ana, Illinois 85486
-							</div>
-							<a href="#" class="footer__item">+490(332) 0000</a>
-							<a href="#" class="footer__item">Privacy policy </a>
-							<a href="#" class="footer__item">Terms of Service</a>
-						</div>
-						<div class="footer__socials">
-							<a href="#" class="footer__social-item">
-								<img src="img/icon-instagram.svg" alt="instagram" />
-								<span>Instagram</span>
-							</a>
-							<a href="#" class="footer__social-item">
-								<img src="img/icon-facebook.svg" alt="Facebook" />
-								<span>Facebook</span>
-							</a>
-							<a href="#" class="footer__social-item">
-								<img src="img/icon-tiktok.svg" alt="Tik Tok" />
-								<span>Tik Tok</span>
-							</a>
-						</div>
-					</div>
-					<div class="footer__mb-inner">
-						<div class="footer__col">
-							<div class="footer__nav">
-								<ul class="footer__menu">
-									<li class="footer__item"><a href="#">About</a></li>
-									<li class="footer__item"><a href="#">Media & Content</a></li>
-									<li class="footer__item"><a href="#">Projects</a></li>
-									<li class="footer__item"><a href="#">Get involved</a></li>
-									<li class="footer__item"><a href="#">Сontact Us</a></li>
-								</ul>
-							</div>
-							<div class="footer__wraps">
-								<a href="#" class="footer__wrap">+490(332) 0000</a>
-								<div class="footer__wrap">
-									2972 Westheimer Rd. Santa Ana, Illinois 85486
-								</div>
-							</div>
-						</div>
-						<div class="footer__col">
-							<div class="footer__wraps">
-								<a href="#" class="footer__wrap">Privacy policy</a>
-								<a href="#" class="footer__wrap">Terms of Service</a>
-							</div>
-							<div class="footer__socials">
-								<a href="#" class="footer__social-item">
-									<img src="img/icon-instagram.svg" alt="instagram" />
-									<span>Instagram</span>
-								</a>
-								<a href="#" class="footer__social-item">
-									<img src="img/icon-facebook.svg" alt="Facebook" />
-									<span>Facebook</span>
-								</a>
-								<a href="#" class="footer__social-item">
-									<img src="img/icon-tiktok.svg" alt="Tik Tok" />
-									<span>Tik Tok</span>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</footer>
-			<!-- Footer -->
-		</div>
-		<script type="module" src="./js/main.min.js"></script>
-	</body>
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="footer__container">
+          <div class="footer__head">
+            <a href="#" class="footer__logo"
+              ><img src="img/logo-footer.png" alt="logo"
+            /></a>
+            <p class="footer__text">Empowering Unity Through Knowledge</p>
+          </div>
+          <div class="footer__inner">
+            <div class="footer__nav">
+              <ul class="footer__menu">
+                <li class="footer__item"><a href="#">About</a></li>
+                <li class="footer__item"><a href="#">Media & Content</a></li>
+                <li class="footer__item"><a href="#">Projects</a></li>
+                <li class="footer__item"><a href="#">Get involved</a></li>
+                <li class="footer__item"><a href="#">Сontact Us</a></li>
+              </ul>
+            </div>
+            <div class="footer__info">
+              <div class="footer__item">
+                2972 Westheimer Rd. Santa Ana, Illinois 85486
+              </div>
+              <a href="#" class="footer__item">+490(332) 0000</a>
+              <a href="#" class="footer__item">Privacy policy </a>
+              <a href="#" class="footer__item">Terms of Service</a>
+            </div>
+            <div class="footer__socials">
+              <a href="#" class="footer__social-item">
+                <img src="img/icon-instagram.svg" alt="instagram" />
+                <span>Instagram</span>
+              </a>
+              <a href="#" class="footer__social-item">
+                <img src="img/icon-facebook.svg" alt="Facebook" />
+                <span>Facebook</span>
+              </a>
+              <a href="#" class="footer__social-item">
+                <img src="img/icon-tiktok.svg" alt="Tik Tok" />
+                <span>Tik Tok</span>
+              </a>
+            </div>
+          </div>
+          <div class="footer__mb-inner">
+            <div class="footer__col">
+              <div class="footer__nav">
+                <ul class="footer__menu">
+                  <li class="footer__item"><a href="#">About</a></li>
+                  <li class="footer__item"><a href="#">Media & Content</a></li>
+                  <li class="footer__item"><a href="#">Projects</a></li>
+                  <li class="footer__item"><a href="#">Get involved</a></li>
+                  <li class="footer__item"><a href="#">Сontact Us</a></li>
+                </ul>
+              </div>
+              <div class="footer__wraps">
+                <a href="#" class="footer__wrap">+490(332) 0000</a>
+                <div class="footer__wrap">
+                  2972 Westheimer Rd. Santa Ana, Illinois 85486
+                </div>
+              </div>
+            </div>
+            <div class="footer__col">
+              <div class="footer__wraps">
+                <a href="#" class="footer__wrap">Privacy policy</a>
+                <a href="#" class="footer__wrap">Terms of Service</a>
+              </div>
+              <div class="footer__socials">
+                <a href="#" class="footer__social-item">
+                  <img src="img/icon-instagram.svg" alt="instagram" />
+                  <span>Instagram</span>
+                </a>
+                <a href="#" class="footer__social-item">
+                  <img src="img/icon-facebook.svg" alt="Facebook" />
+                  <span>Facebook</span>
+                </a>
+                <a href="#" class="footer__social-item">
+                  <img src="img/icon-tiktok.svg" alt="Tik Tok" />
+                  <span>Tik Tok</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- Footer -->
+    </div>
+  </body>
 </html>
