--- a/truth/get-involved.html
+++ b/truth/get-involved.html
@@ -9,9 +9,9 @@
   />
   <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125181113"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125194147"
   />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250125181113" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20250125194147" />
   <title>Get involved</title>
 </head>
 
@@ -56,7 +56,11 @@
             </p>
           </div>
           <div class="involved__img">
-            <picture><source srcset="img/involved-img.webp" type="image/webp"><img src="img/involved-img.png" alt="involved-img" /></picture>
+            <img
+              class="lazy"
+              data-src="img/involved-img.png"
+              alt="involved-img"
+            />
           </div>
         </section>
         <!-- Станьте переменами. Присоединяйтесь -->
@@ -143,7 +147,11 @@
               </div>
             </div>
             <div class="participate__logo">
-              <picture><source srcset="img/journey-logo.webp" type="image/webp"><img src="img/journey-logo.png" alt="participate-logo" /></picture>
+              <img
+                class="lazy"
+                data-src="img/journey-logo.png"
+                alt="participate-logo"
+              />
             </div>
           </div>
         </section>
@@ -158,7 +166,11 @@
             </h2>
           </div>
           <div class="movement__image">
-            <picture><source srcset="img/movement-img.webp" type="image/webp"><img src="img/movement-img.png" alt="movement-img" /></picture>
+            <img
+              class="lazy"
+              data-src="img/movement-img.png"
+              alt="movement-img"
+            />
           </div>
           <div class="movement__container">
             <p class="movement__text">
@@ -256,6 +268,6 @@
 
       <!-- Подвал -->
     </div>
-    <script src="js/app.min.js?_v=20250125181113"></script>
+    <script src="js/app.min.js?_v=20250125194147"></script>
   </body>
 </html>
