--- a/truth/index.html
+++ b/truth/index.html
@@ -9,9 +9,9 @@
   />
   <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125181113"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125194147"
   />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250125181113" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20250125194147" />
   <title>Truth</title>
 </head>
 
@@ -41,7 +41,84 @@
       <img src="img/icon-menu.svg" alt="icon-menu" />
     </div>
   </div>
+  я
 </header>
+
+<div class="modal-menu">
+  <div class="modal-menu__backdrop"></div>
+  <div class="modal-menu__content">
+    <a href="index.html" class="modal-menu__logo"
+      ><img src="img/logo.png" alt="logo"
+    /></a>
+    <button class="modal-menu__close">&times;</button>
+    <nav class="modal-menu__nav">
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Media & Content</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Get involved</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+    <div class="modal-menu__info">
+      <a href="#" class="modal-menu__item">+490(332) 0000</a>
+      <a href="#" class="modal-menu__item">Privacy policy </a>
+      <a href="#" class="modal-menu__item">Terms of Service</a>
+    </div>
+    <div class="modal-menu__socials">
+      <a href="#" class="modal-menu__social-item">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="25"
+          height="24"
+          viewBox="0 0 25 24"
+          fill="none"
+        >
+          <path
+            d="M20.1189 2H4.88111C4.24978 2.00059 3.64448 2.25164 3.19806 2.69806C2.75164 3.14448 2.50059 3.74978 2.5 4.38111V19.6189C2.5 20.9333 3.56778 22 4.88111 22H20.1189C20.7502 21.9994 21.3555 21.7484 21.8019 21.3019C22.2484 20.8555 22.4994 20.2502 22.5 19.6189V4.38111C22.4994 3.74978 22.2484 3.14448 21.8019 2.69806C21.3555 2.25164 20.7502 2.00059 20.1189 2ZM18.2167 10.7256C17.5158 10.7936 16.8107 10.65 16.1922 10.3133C15.6706 10.0321 15.2275 9.62495 14.9033 9.12889V14.6222C14.9033 15.4252 14.6652 16.2102 14.2191 16.8778C13.773 17.5455 13.1389 18.0659 12.397 18.3732C11.6552 18.6805 10.8388 18.7609 10.0513 18.6042C9.2637 18.4476 8.54028 18.0609 7.97248 17.4931C7.40468 16.9253 7.018 16.2019 6.86135 15.4143C6.70469 14.6267 6.78509 13.8104 7.09238 13.0685C7.39967 12.3267 7.92006 11.6926 8.58772 11.2465C9.25538 10.8003 10.0403 10.5622 10.8433 10.5622C10.9278 10.5622 11.01 10.57 11.0933 10.5744V12.5756C11.01 12.5656 10.9289 12.55 10.8433 12.55C10.2937 12.55 9.76667 12.7683 9.37805 13.1569C8.98943 13.5456 8.77111 14.0726 8.77111 14.6222C8.77111 15.1718 8.98943 15.6989 9.37805 16.0875C9.76667 16.4761 10.2937 16.6944 10.8433 16.6944C11.9878 16.6944 12.9989 15.7933 12.9989 14.6489L13.0189 5.31778H14.9333C15.021 6.14936 15.398 6.92373 15.9985 7.50559C16.5991 8.08745 17.3849 8.43981 18.2189 8.50111V10.7256"
+            fill="#0a0f0f"
+          />
+        </svg>
+        <span>Instagram</span>
+      </a>
+      <a href="#" class="modal-menu__social-item">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="25"
+          height="24"
+          viewBox="0 0 25 24"
+          fill="none"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M16.225 22V14.255H18.825L19.214 11.237H16.224V9.31C16.224 8.436 16.467 7.84 17.721 7.84H19.319V5.14C18.5452 5.05685 17.7673 5.01679 16.989 5.02C14.685 5.02 13.108 6.427 13.108 9.01V11.237H10.5V14.255H13.107V22H3.604C2.994 22 2.5 21.506 2.5 20.896V3.104C2.5 2.494 2.994 2 3.604 2H21.396C22.006 2 22.5 2.494 22.5 3.104V20.896C22.5 21.506 22.006 22 21.396 22H16.225Z"
+            fill="#0a0f0f"
+          />
+        </svg>
+        <span>Facebook</span>
+      </a>
+      <a href="#" class="modal-menu__social-item">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="25"
+          height="24"
+          viewBox="0 0 25 24"
+          fill="none"
+        >
+          <path
+            d="M20.1189 2H4.88111C4.24978 2.00059 3.64448 2.25164 3.19806 2.69806C2.75164 3.14448 2.50059 3.74978 2.5 4.38111V19.6189C2.5 20.9333 3.56778 22 4.88111 22H20.1189C20.7502 21.9994 21.3555 21.7484 21.8019 21.3019C22.2484 20.8555 22.4994 20.2502 22.5 19.6189V4.38111C22.4994 3.74978 22.2484 3.14448 21.8019 2.69806C21.3555 2.25164 20.7502 2.00059 20.1189 2ZM18.2167 10.7256C17.5158 10.7936 16.8107 10.65 16.1922 10.3133C15.6706 10.0321 15.2275 9.62495 14.9033 9.12889V14.6222C14.9033 15.4252 14.6652 16.2102 14.2191 16.8778C13.773 17.5455 13.1389 18.0659 12.397 18.3732C11.6552 18.6805 10.8388 18.7609 10.0513 18.6042C9.2637 18.4476 8.54028 18.0609 7.97248 17.4931C7.40468 16.9253 7.018 16.2019 6.86135 15.4143C6.70469 14.6267 6.78509 13.8104 7.09238 13.0685C7.39967 12.3267 7.92006 11.6926 8.58772 11.2465C9.25538 10.8003 10.0403 10.5622 10.8433 10.5622C10.9278 10.5622 11.01 10.57 11.0933 10.5744V12.5756C11.01 12.5656 10.9289 12.55 10.8433 12.55C10.2937 12.55 9.76667 12.7683 9.37805 13.1569C8.98943 13.5456 8.77111 14.0726 8.77111 14.6222C8.77111 15.1718 8.98943 15.6989 9.37805 16.0875C9.76667 16.4761 10.2937 16.6944 10.8433 16.6944C11.9878 16.6944 12.9989 15.7933 12.9989 14.6489L13.0189 5.31778H14.9333C15.021 6.14936 15.398 6.92373 15.9985 7.50559C16.5991 8.08745 17.3849 8.43981 18.2189 8.50111V10.7256"
+            fill="#0a0f0f"
+          />
+        </svg>
+        <span>Tik Tok</span>
+      </a>
+    </div>
+    <div class="modal-menu__contact">
+      2972 Westheimer Rd. Santa Ana, Illinois 85486
+    </div>
+  </div>
+</div>
 
       <!-- Шапка -->
       <main>
@@ -85,7 +162,7 @@
   <div class="new-era__container">
     <h2 class="new-era__title">A New Era of Truth and Unity Begins Here</h2>
     <div class="new-era__img">
-      <picture><source srcset="img/new-era.webp" type="image/webp"><img src="img/new-era.png" alt="new-era" /></picture>
+      <picture><source data-srcset="img/new-era.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/new-era.png" alt="new-era" /></picture>
     </div>
     <p class="new-era__descr">
       Through innovation, tradition, and shared values, we aim to inspire every
@@ -110,7 +187,7 @@
     </p>
   </div>
   <div class="conversation__image">
-    <picture><source srcset="img/maps-img.webp" type="image/webp"><img src="img/maps-img.png" alt="maps" /></picture>
+    <picture><source data-srcset="img/maps-img.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/maps-img.png" alt="maps" /></picture>
   </div>
 </section>
 
@@ -128,7 +205,7 @@
             Interactive tools for uncovering biblical codes
           </p>
           <div class="our-initiatives__bg">
-            <picture><source srcset="img/bg-our-1.webp" type="image/webp"><img src="img/bg-our-1.png" alt="ai & toran" /></picture>
+            <picture><source data-srcset="img/bg-our-1.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/bg-our-1.png" alt="ai & toran" /></picture>
           </div>
         </div>
         <div class="swiper-slide">
@@ -137,7 +214,7 @@
             A positive spin on news with "Boker Tov."
           </p>
           <div class="our-initiatives__bg">
-            <picture><source srcset="img/bg-our-2.webp" type="image/webp"><img src="img/bg-our-2.png" alt="ai & toran" /></picture>
+            <picture><source data-srcset="img/bg-our-2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/bg-our-2.png" alt="ai & toran" /></picture>
           </div>
         </div>
         <div class="swiper-slide">
@@ -146,7 +223,7 @@
             Adventures uncovering hidden biblical truths
           </p>
           <div class="our-initiatives__bg">
-            <picture><source srcset="img/bg-our-3.webp" type="image/webp"><img src="img/bg-our-3.png" alt="ai & toran" /></picture>
+            <picture><source data-srcset="img/bg-our-3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/bg-our-3.png" alt="ai & toran" /></picture>
           </div>
         </div>
         <div class="swiper-slide">
@@ -155,7 +232,7 @@
             Bringing Jewish traditions to life digitally
           </p>
           <div class="our-initiatives__bg">
-            <picture><source srcset="img/bg-our-4.webp" type="image/webp"><img src="img/bg-our-4.png" alt="ai & toran" /></picture>
+            <picture><source data-srcset="img/bg-our-4.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/bg-our-4.png" alt="ai & toran" /></picture>
           </div>
         </div>
       </div>
@@ -173,7 +250,11 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-2.webp" type="image/webp"><img src="img/person-2.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-2.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -190,7 +271,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-1.webp" type="image/webp"><img src="img/person-1.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-1.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -207,7 +292,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-2.webp" type="image/webp"><img src="img/person-2.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-2.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -224,7 +313,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-3.webp" type="image/webp"><img src="img/person-3.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-3.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -241,7 +334,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-4.webp" type="image/webp"><img src="img/person-4.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-4.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -258,7 +355,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-5.webp" type="image/webp"><img src="img/person-5.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-5.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -275,7 +376,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-6.webp" type="image/webp"><img src="img/person-6.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-6.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -292,7 +397,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-7.webp" type="image/webp"><img src="img/person-7.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-7.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -309,7 +418,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-8.webp" type="image/webp"><img src="img/person-8.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-8.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -326,7 +439,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-8.webp" type="image/webp"><img src="img/person-8.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-8.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -343,7 +460,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-9.webp" type="image/webp"><img src="img/person-9.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-9.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -360,7 +481,11 @@
         </div>
         <div class="swiper-slide">
           <div class="about__image">
-            <picture><source srcset="img/person-8.webp" type="image/webp"><img src="img/person-8.png" alt="Olivia Shakovski" /></picture>
+            <img
+              class="lazy"
+              data-src="img/person-8.png"
+              alt="Olivia Shakovski"
+            />
           </div>
           <div class="about__info">
             <h3 class="about__name">Olivia Shakovski</h3>
@@ -541,9 +666,9 @@
 
       <!-- Подвал -->
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250125181113"></script>
-    <script src="js/app.min.js?_v=20250125181113"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250125194147"></script>
+    <script src="js/app.min.js?_v=20250125194147"></script>
     <!-- Валидация формы -->
-    <script src="files/validForm.js?_v=20250125181113"></script>
+    <script src="files/validForm.js?_v=20250125194147"></script>
   </body>
 </html>
