--- a/truth/page-projects.html
+++ b/truth/page-projects.html
@@ -9,9 +9,9 @@
   />
   <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125181113"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125194147"
   />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250125181113" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20250125194147" />
   <title>Projects</title>
 </head>
 
@@ -64,7 +64,11 @@
       </div>
     </div>
     <div class="discoveries__image">
-      <picture><source srcset="img/discoveries-img-3.webp" type="image/webp"><img src="img/discoveries-img-3.png" alt="discoveriesimg-img-3" /></picture>
+      <img
+        class="lazy"
+        data-src="img/discoveries-img-3.png"
+        alt="discoveriesimg-img-3"
+      />
     </div>
   </div>
 </section>
@@ -99,7 +103,11 @@
       </svg>
     </a>
     <div class="ai-torah-codes__image">
-      <picture><source srcset="img/ai-torah-codes-img.webp" type="image/webp"><img src="img/ai-torah-codes-img.png" alt="ai-torah-codes-img" /></picture>
+      <img
+        class="lazy"
+        data-src="img/ai-torah-codes-img.png"
+        alt="ai-torah-codes-img"
+      />
     </div>
   </div>
 </section>
@@ -133,7 +141,11 @@
       </svg>
     </a>
     <div class="feature-film-truth__image">
-      <picture><source srcset="img/feature-film-truth-img.webp" type="image/webp"><img src="img/feature-film-truth-img.png" alt="feature-film-truth-img" /></picture>
+      <img
+        class="lazy"
+        data-src="img/feature-film-truth-img.png"
+        alt="feature-film-truth-img"
+      />
     </div>
   </div>
 </section>
@@ -169,7 +181,8 @@
     </a>
     <div class="ar-effects-tradition__image">
       <img
-        src="img/ar-effects-tradition-img.png"
+        class="lazy"
+        data-src="img/ar-effects-tradition-img.png"
         alt="ar-effects-tradition-img"
       />
     </div>
@@ -206,7 +219,7 @@
       </svg>
     </a>
     <div class="effects__image">
-      <picture><source srcset="img/effects-img.webp" type="image/webp"><img src="img/effects-img.png" alt="effects-img" /></picture>
+      <picture><source data-srcset="img/effects-img.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/effects-img.png" alt="effects-img" /></picture>
     </div>
   </div>
 </section>
@@ -255,7 +268,7 @@
         </p>
       </div>
       <div class="impact__image">
-        <picture><source srcset="img/impact-img.webp" type="image/webp"><img src="img/impact-img.png" alt="impact-img" /></picture>
+        <picture><source data-srcset="img/impact-img.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/impact-img.png" alt="impact-img" /></picture>
       </div>
     </div>
   </div>
@@ -275,7 +288,7 @@
     </div>
 
     <div class="journey__logo">
-      <picture><source srcset="img/journey-logo.webp" type="image/webp"><img src="img/journey-logo.png" alt="journey-logo" /></picture>
+      <picture><source data-srcset="img/journey-logo.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/journey-logo.png" alt="journey-logo" /></picture>
     </div>
     <a href="#" class="journey__more">Get Involved Today</a>
   </div>
@@ -369,6 +382,6 @@
 
 			<!-- Подвал -->
 		</div>
-		<script src="js/app.min.js?_v=20250125181113"></script>
+		<script src="js/app.min.js?_v=20250125194147"></script>
 	</body>
 </html>
