--- a/truth/index.html
+++ b/truth/index.html
@@ -9,9 +9,9 @@
   />
   <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125194147"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250125214520"
   />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250125194147" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20250125214520" />
   <title>Truth</title>
 </head>
 
@@ -187,10 +187,11 @@
     </p>
   </div>
   <div class="conversation__image">
-    <picture><source data-srcset="img/maps-img.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/maps-img.png" alt="maps" /></picture>
+    <picture><source srcset="img/maps-img.webp" type="image/webp"><img src="img/maps-img.png" alt="maps" /></picture>
   </div>
 </section>
 
+              
         <!-- Разговор -->
 
         <!-- Изучите наши инициативы -->
@@ -246,9 +247,9 @@
         <section class="about">
   <div class="about__container">
     <h2 class="about__title">What They’re Saying About Us</h2>
-    <div class="swiper about__swiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
+    <div class="about__slider">
+      <div class="about__wrapper">
+        <div class="about__item" data-index="1">
           <div class="about__image">
             <img
               class="lazy"
@@ -256,20 +257,8 @@
               alt="Olivia Shakovski"
             />
           </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
         </div>
-        <div class="swiper-slide">
+        <div class="about__item" data-index="2">
           <div class="about__image">
             <img
               class="lazy"
@@ -277,41 +266,8 @@
               alt="Olivia Shakovski"
             />
           </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
         </div>
-        <div class="swiper-slide">
-          <div class="about__image">
-            <img
-              class="lazy"
-              data-src="img/person-2.png"
-              alt="Olivia Shakovski"
-            />
-          </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
-        </div>
-        <div class="swiper-slide">
+        <div class="about__item" data-index="3">
           <div class="about__image">
             <img
               class="lazy"
@@ -319,191 +275,30 @@
               alt="Olivia Shakovski"
             />
           </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
         </div>
-        <div class="swiper-slide">
-          <div class="about__image">
-            <img
-              class="lazy"
-              data-src="img/person-4.png"
-              alt="Olivia Shakovski"
-            />
-          </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="about__image">
-            <img
-              class="lazy"
-              data-src="img/person-5.png"
-              alt="Olivia Shakovski"
-            />
-          </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="about__image">
-            <img
-              class="lazy"
-              data-src="img/person-6.png"
-              alt="Olivia Shakovski"
-            />
-          </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="about__image">
-            <img
-              class="lazy"
-              data-src="img/person-7.png"
-              alt="Olivia Shakovski"
-            />
-          </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="about__image">
-            <img
-              class="lazy"
-              data-src="img/person-8.png"
-              alt="Olivia Shakovski"
-            />
-          </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="about__image">
-            <img
-              class="lazy"
-              data-src="img/person-8.png"
-              alt="Olivia Shakovski"
-            />
-          </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="about__image">
-            <img
-              class="lazy"
-              data-src="img/person-9.png"
-              alt="Olivia Shakovski"
-            />
-          </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="about__image">
-            <img
-              class="lazy"
-              data-src="img/person-8.png"
-              alt="Olivia Shakovski"
-            />
-          </div>
-          <div class="about__info">
-            <h3 class="about__name">Olivia Shakovski</h3>
-            <p class="about__descr">
-              I found profound meaning and a sense of purpose here. This
-              organization provided me with peace, clarity, and a space to seek
-              truth. It has been a place where I felt truly connected to others,
-              creating a strong sense of unity. The teachings resonate deeply,
-              offering guidance and wisdom that I can carry into my daily life.
-              I’m truly grateful for the sense of belonging and understanding
-              I’ve experienced.
-            </p>
-          </div>
-        </div>
+        <div class="about__item" data-index="4"></div>
+        <div class="about__item" data-index="5"></div>
+        <div class="about__item" data-index="6"></div>
+        <div class="about__item" data-index="7"></div>
+        <div class="about__item" data-index="8"></div>
+        <div class="about__item" data-index="9"></div>
       </div>
     </div>
   </div>
 </section>
+
+<!--           <div class="about__info">
+            <h3 class="about__name">Olivia Shakovski</h3>
+            <p class="about__descr">
+              I found profound meaning and a sense of purpose here. This
+              organization provided me with peace, clarity, and a space to seek
+              truth. It has been a place where I felt truly connected to others,
+              creating a strong sense of unity. The teachings resonate deeply,
+              offering guidance and wisdom that I can carry into my daily life.
+              I’m truly grateful for the sense of belonging and understanding
+              I’ve experienced.
+            </p>
+          </div> -->
 
         <!-- Что о нас говорят -->
 
@@ -666,9 +461,9 @@
 
       <!-- Подвал -->
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250125194147"></script>
-    <script src="js/app.min.js?_v=20250125194147"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250125214520"></script>
+    <script src="js/app.min.js?_v=20250125214520"></script>
     <!-- Валидация формы -->
-    <script src="files/validForm.js?_v=20250125194147"></script>
+    <script src="files/validForm.js?_v=20250125214520"></script>
   </body>
 </html>
